// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for bitbucket 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <ForwardRef(Link)
            target="_blank"
            to="http://bbs.enterprise.com/plugins/servlet/webhooks/projects/PROJECT_KEY/repos/repo-slug/create"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.link
          </ForwardRef(Link)>,
        }
      }
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify?server_url=http://bbs.enterprise.com"
        />
        <Alert
          variant="info"
        >
          onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url.warning
        </Alert>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "events",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2"
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "create",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucket: with branches disabled 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <ForwardRef(Link)
            target="_blank"
            to="http://bbs.enterprise.com/plugins/servlet/webhooks/projects/PROJECT_KEY/repos/repo-slug/create"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.link
          </ForwardRef(Link)>,
        }
      }
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/job/***JENKINS_JOB_NAME***/build?token=***JENKINS_BUILD_TRIGGER_TOKEN***"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "events",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2"
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.repo"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "create",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucket: with no alm binding 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <strong>
            onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.link
          </strong>,
        }
      }
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify?server_url=***BITBUCKET_URL***"
        />
        <Alert
          variant="info"
        >
          onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url.warning
        </Alert>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "events",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2"
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "create",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucketcloud 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <ForwardRef(Link)
            target="_blank"
            to="http://bitbucket.org/workspace/repo-slug/admin/addon/admin/bitbucket-webhooks/bb-webhooks-repo-admin"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step1.link
          </ForwardRef(Link)>,
        }
      }
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "triggers",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2"
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "save",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucketcloud: with branches disabled 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <ForwardRef(Link)
            target="_blank"
            to="http://bitbucket.org/workspace/repo-slug/admin/addon/admin/bitbucket-webhooks/bb-webhooks-repo-admin"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step1.link
          </ForwardRef(Link)>,
        }
      }
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/job/***JENKINS_JOB_NAME***/build?token=***JENKINS_BUILD_TRIGGER_TOKEN***"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "triggers",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2"
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.repo"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "save",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucketcloud: with no alm binding 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": <strong>
            onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step1.link
          </strong>,
        }
      }
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "triggers",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2"
    />
    <ul
      className="list-styled list-alpha"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "save",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step3"
    />
  </li>
</Fragment>
`;
